k8s/microservice1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice1
  labels:
    app: microservice1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservice1
  template:
    metadata:
      labels:
        app: microservice1
    spec:
      containers:
      - name: microservice1
        image: testcicdvs.jfrog.io/vs-docker-repo/microservice1:3.0.0
        ports:
        - containerPort: 8081
      imagePullSecrets:
      - name: regcred
