k8s/microservice2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice2
  labels:
    app: microservice2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservice2
  template:
    metadata:
      labels:
        app: microservice2
    spec:
      containers:
      - name: microservice2
        image: testcicdvs.jfrog.io/vs-docker-repo/microservice2:3.1.0
        ports:
        - containerPort: 8082
      imagePullSecrets:
      - name: regcred
