k8s/microservice2-service.yaml
# microservice2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice2-svc
  namespace: ns-vs-demo
spec:
  selector:
    app: microservice2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8082
