k8s/microservice3-service.yaml
# microservice3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice3
  namespace: ns-vs-demo
spec:
  selector:
    app: microservice3
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
